
package dataControllerUtils.protobuf;

message SamplingLevel {

}
