package dataControllerUtils.protobuf;

message TimeInterval {
extensions 5 to 107;
  optional uint64 lowerMs = 1;
  optional uint32 lowerPs = 2;
  optional uint64 upperMs = 3;
  optional uint32 upperPs = 4;
}