

import "DataQueryFilter.proto";
import "TimeInterval.proto";
import "SamplingLevel.proto";
import "DataId.proto";
package dataControllerUtils.protobuf;

message DataQuery {
extensions 14 to 107;

  optional DataId dataId = 1;
  repeated DataQueryFilter filters = 2;
  optional TimeInterval interval = 3;
  optional SamplingLevel sampling = 4;
}
